--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 
 
-        </div>
+        </div><!---------about section ends --------------------------------------------------------------------------->
 
 
 
@@ -206,7 +206,10 @@
 
 
 
+<div class="footer">
 
+    <h3>Site design by Colin Anderson 2021</h3>
+</div>
 
 
 
